--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,26 @@
 [project]
 name = "jscip"
 version = "0.1.0"
-description = "Add your description here"
+description = "Framework for managing numerical parameters with optional sampling and constraints."
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = []
+dependencies = [
+    "numpy>=2.3.4",
+    "pandas>=2.3.3",
+    "scipy>=1.16.3",
+]
+
+[dependency-groups]
+dev = [
+    "pytest>=9.0.0",
+]
+
+[build-system]
+requires = ["hatchling>=1.27"]
+build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["jscip"]
+
+[tool.pytest.ini_options]
+testpaths = ["test"]
