--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,35 @@ on:
   pull_request:
 
 jobs:
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: '3.12'
+      - name: Install ruff
+        run: python -m pip install -U ruff
+      - name: Run ruff linter
+        run: ruff check jscip/ test/
+      - name: Run ruff formatter check
+        run: ruff format --check jscip/ test/
+
+  type-check:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: '3.12'
+      - name: Install dependencies
+        run: |
+          python -m pip install -U pip
+          pip install -U mypy
+          pip install .
+      - name: Run mypy
+        run: mypy jscip/
+
   test:
     runs-on: ubuntu-latest
     strategy:
@@ -22,7 +51,7 @@ jobs:
           pip install -U pytest
           pip install .
       - name: Run tests
-        run: pytest -q
+        run: pytest -v
 
   build:
     runs-on: ubuntu-latest
