--- a/pyproject.toml
+++ b/pyproject.toml
@@ -72,3 +72,7 @@ strict_equality = true
 [[tool.mypy.overrides]]
 module = "scipy.*"
 ignore_missing_imports = true
+
+[[tool.mypy.overrides]]
+module = "pandas.*"
+ignore_missing_imports = true
